clusters/corpus/apps/media/qdirstat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qdirstat
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-url: "http://qdirstat-oauth2-proxy.media.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "14400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "14400"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    external-dns.kubernetes.io/target: ${personal_services_ip}
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "du.${personal_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: qdirstat
                port:
                  number: 5800
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qdirstat-oauth2-proxy
  namespace: media
  annotations:
    external-dns.kubernetes.io/exclude: "true"
  labels:
    use-cloudflare-dns-solver: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "du.${personal_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: qdirstat-oauth2-proxy
                port:
                  number: 80
